# WakeUpAI

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  pyproject.toml
src/: alarms.json  api.py  config.py  main.py  webui.py
src/alarm/: alarm.py  alarm_handler.py  newalarm.py
src/hardware/: audio_player.py  hardware.py
src/wakeupai/: feeds.py  tts.py
tests/: test_alarm.py  test_feeds.py  test_tts.py
wakeupai/: alarm.py  alarm_handler.py  audio_player.py  config.py  feeds.py  hardware.py  tts.py  webui.py
